<resources>
    <string name="app_name">AndroidGpsMapApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="load">Load</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="apply">Apply</string>
    <string name="set_min_max_speed">Set min / max speed</string>
    <string name="cp">CP</string>
    <string name="wp">L</string>
    <string name="start">START</string>
    <string name="avg_spd">AVG spd</string>
    <string name="avg_spd_wp">AVG spd WP</string>
    <string name="distance_cp_to_current_line">Distance CP to current (line)</string>
    <string name="distance_wp_to_current">Distance WP to current</string>
    <string name="distance_wp_to_current_line">Distance WP to current (line)</string>
    <string name="overall">Overall</string>
    <string name="duration">Duration</string>
    <string name="add_cp">Add CP</string>
    <string name="textview">TextView</string>
    <string name="center">Center</string>
    <string name="compass">Compass</string>
    <string name="north_up">North-up</string>
    <string name="options">Options</string>
    <string name="set">Set</string>
</resources>